config/openshift/mti-dev-td/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-tester
  name: app-tester-service
spec:
  ports:
  - name: "http"
    port: 80
    targetPort: 3000
  type: "ClusterIP"
  selector:
    app: app-tester
