config/openshift/mti-dev-td/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: app-tester
  name: app-tester-route
spec:
  host: app-tester-dev.apps.ocp-mti.infovia-mt
  to:
    kind: Service
    name: app-tester-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status:
  ingress:
    - host: app-tester-dev.apps.ocp-mti.infovia-mt
      routerName: router
      wildcardPolicy: None
